k8s-config/wanttosell.api.config.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wanttosell
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wanttosell-api
  namespace: wanttosell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wanttosell-api
  template:
    metadata:
      labels:
        app: wanttosell-api
    spec:
      containers:
      - name: wanttosell-api
        image: lmat9/wanttosell-api:cachefix
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "2Gi"
            cpu: "2"
          limits:
            memory: "2Gi"
            cpu: "2"
        volumeMounts:
        - mountPath: /app/data
          name: data-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: wanttosell-api-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wanttosell-api
  namespace: wanttosell
spec:
  selector:
    app: wanttosell-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
