k8s-config/wanttosell.database.config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wanttosell-database
  namespace: wanttosell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wanttosell-database
  template:
    metadata:
      labels:
        app: wanttosell-database
    spec:
      containers:
      - name: wanttosell-database
        image: mcr.microsoft.com/mssql/server:2022-latest
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 1433
        resources:
          requests:
            memory: "2Gi"
            cpu: "2"
          limits:
            memory: "2Gi"
            cpu: "2"
        volumeMounts:
        - mountPath: /var/opt/mssql
          name: db-volume
      volumes:
      - name: db-volume
        persistentVolumeClaim:
          claimName: wanttosell-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wanttosell-database
  namespace: wanttosell
spec:
  type: NodePort
  selector:
    app: wanttosell-database
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
