k8s-config/wanttosell.redis.config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wanttosell-redis
  namespace: wanttosell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wanttosell-redis
  template:
    metadata:
      labels:
        app: wanttosell-redis
    spec:
      containers:
      - name: wanttosell-redis
        image: redis
        ports:
        - containerPort: 6379
        resources:
          requests:
            memory: "2Gi"
            cpu: "2"
          limits:
            memory: "2Gi"
            cpu: "2"
---
apiVersion: v1
kind: Service
metadata:
  name: wanttosell-redis
  namespace: wanttosell
spec:
  selector:
    app: wanttosell-redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
