k8s-config/wanttosell.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wanttosell-api-ingress
  namespace: wanttosell
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/load-balance: "least_conn"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wanttosell-api
                port:
                  number: 80
